--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="cover">
         <h1>Let’s Help Those Who Are <br>More In Need</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, dicta.</p>
         <button>Donate Now</button>
