--- a/index.html
+++ b/index.html
@@ -14,27 +14,31 @@
 
 <body>
     <section class="cover">
-        <h1>Let’s Help Those Who Are <br>More In Need</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, dicta.</p>
-        <button>Donate Now</button>
+        <div id="one">
+            <h1><strong>Let’s Help Those Who Are <br>More In Need</strong></h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, dicta.</p>
+            <button>Donate Now</button>
+        </div>
     </section>
     <section>
         <h1>Donate Today</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur laborum dolorem soluta?</p>
-        <div>
-            <h1>100tk</h1>
-        </div>
-        <div>
-            <h1>200tk</h1>
-        </div>
-        <div>
-            <h1>500tk</h1>
-        </div>
-        <div>
-            <h1>1000tk</h1>
-        </div>
-        <div>
-            <h1>5000tk</h1>
+        <section class="taka">
+            <div>
+                <h1>100tk</h1>
+            </div>
+            <div>
+                <h1>200tk</h1>
+            </div>
+            <div>
+                <h1>500tk</h1>
+            </div>
+            <div>
+                <h1>1000tk</h1>
+            </div>
+            <div>
+                <h1>5000tk</h1>
+        </section>
         </div>
         <p>Other Amount (Taka)</p>
         <button>Donate Now</button>
@@ -76,4 +80,5 @@
     <h1>Be Humble</h1>
     <p>I'm gonna do it</p>
 </footer>
+
 </html>
