--- a/index.html
+++ b/index.html
@@ -9,67 +9,86 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="cover">
-        <div id="one">
-            <h1><strong>Let’s Help Those Who Are <br>More In Need</strong></h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, dicta.</p>
+        <div>
+            <h1>Let’s Help Those Who Are <br>More In Need</h1>
+            <p>A flood is an overflow of water or rarely other fluids that submerges land that is usually dry <br> In
+                the sense of flowing water, the word may also be applied to the inflow of the tide.</p>
             <button>Donate Now</button>
         </div>
     </section>
-    <section>
+    <section class="zero">
         <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur laborum dolorem soluta?</p>
-        <section class="taka">
-            <div>
+        <p class="gray">Wwe collect donation for flood affected people in Shylet, Bangladesh. <br>Raise your hands for
+            needy people</p>
+        <section class="one">
+            <div class="taka">
                 <h1>100tk</h1>
             </div>
-            <div>
+            <div class="taka taka-orange">
                 <h1>200tk</h1>
             </div>
-            <div>
+            <div class="taka">
                 <h1>500tk</h1>
             </div>
-            <div>
+            <div class="taka">
                 <h1>1000tk</h1>
             </div>
-            <div>
+            <div class="taka">
                 <h1>5000tk</h1>
         </section>
         </div>
-        <p>Other Amount (Taka)</p>
+        <p class="gray">Other Amount (Taka)</p>
+        <hr>
         <button>Donate Now</button>
     </section>
-    <section>
+
+    <section class="plan">
         <h1>Our Donate Plan</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, recusandae.</p>
-        <div>
-            <h2>Food for a family</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, nulla.</p>
+        <p class="gray">First of all, We sure about food efficiency in floody area. <br>Then give them temporary shelter
+            <br>and educational programme for their childer.</p>
+        <section class="fse">
+            <div id="food">
+                <img src="/icons/ramen_dining_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <h2>Food for a family</h2>
+                <p class="gray">any nutritious substance that people or animals eat or drink or that plants absorb in
+                    order to maintain life and growth.</p>
+            </div>
+            <div id="shelter">
+                <img src="/icons/home_work_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <h2>Shelter for a family</h2>
+                <p class="gray">a place giving temporary protection from bad weather or danger.</p>
+            </div>
+            <div id="education">
+                <img src="/icons/school_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <h2>Education for a family</h2>
+                <p class="gray">the process of receiving or giving systematic instruction, especially at a school or
+                    university.</p>
+            </div>
+        </section>
+    </section>
+
+    <section class="extra">
+        <div class="half-width">
+            <h1>No More Homeless, <br>No More Hunger</h1>
+            <p class="gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos commodi quibusdam aperiam quia
+                cum. Incidunt
+                maiores ea repellendus eligendi reiciendis?</p>
+            <button>How to Contribute?</button>
         </div>
-        <div>
-            <h2>Shelter for a family</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, nulla.</p>
-        </div>
-        <div>
-            <h2>Education for a family</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, nulla.</p>
+        <div class="half-width">
+            <img src="/images/donation0.jpg" alt="">
         </div>
     </section>
-    <section>
-        <h1>No More Homeless, <br>No More Hunger</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos commodi quibusdam aperiam quia cum. Incidunt
-            maiores ea repellendus eligendi reiciendis?</p>
-        <button>How to Contribute?</button>
-    </section>
-    <section>
+    <section class="updates">
         <h1>Get My Updates</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea culpa magni pariatur.</p>
-        <div>
-            <form action="/action_page.php">
+        <p class="gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea culpa magni pariatur.</p>
+        <div class="email">
+            <form>
                 <input type="email" placeholder="Email">
                 <input type="submit" value="Subscribe">
             </form>
