--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
     <section class="zero">
         <h1>Donate Today</h1>
-        <p class="gray">Wwe collect donation for flood affected people in Shylet, Bangladesh. <br>Raise your hands for
+        <p class="gray">We collect donation for flood affected people in Shylet, Bangladesh. <br>Raise your hands for
             needy people</p>
         <section class="one">
             <div class="taka">
@@ -50,7 +50,8 @@
     <section class="plan">
         <h1>Our Donate Plan</h1>
         <p class="gray">First of all, We sure about food efficiency in floody area. <br>Then give them temporary shelter
-            <br>and educational programme for their childer.</p>
+            <br>and educational programme for their childer.
+        </p>
         <section class="fse">
             <div id="food">
                 <img src="/icons/ramen_dining_FILL0_wght400_GRAD0_opsz48.svg" alt="">
@@ -75,9 +76,11 @@
     <section class="extra">
         <div class="half-width">
             <h1>No More Homeless, <br>No More Hunger</h1>
-            <p class="gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos commodi quibusdam aperiam quia
-                cum. Incidunt
-                maiores ea repellendus eligendi reiciendis?</p>
+            <p class="gray">Universal free lunch was instituted at the start of the pandemic to make sure children
+                wouldn't go hungry through the crisis.The World Food Program warned that 20 million people in the region
+                could go hungry because of drought by the end of the year.After months of an export blockade by Russia’s
+                navy along Ukraine’s Black Sea coastline, experts estimate another 50 million people could go hungry
+                this year.</p>
             <button>How to Contribute?</button>
         </div>
         <div class="half-width">
@@ -86,7 +89,7 @@
     </section>
     <section class="updates">
         <h1>Get My Updates</h1>
-        <p class="gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea culpa magni pariatur.</p>
+        <p class="gray">If you wanna get updates about our project, please sign up our newsletter.</p>
         <div class="email">
             <form>
                 <input type="email" placeholder="Email">
